--- a/CafeteriaUnapec/CafeteriaUnapec.csproj
+++ b/CafeteriaUnapec/CafeteriaUnapec.csproj
@@ -277,16 +277,16 @@
     <Content Include="Views\Empleados\Details.cshtml" />
     <Content Include="Views\Empleados\Edit.cshtml" />
     <Content Include="Views\Empleados\Index.cshtml" />
-    <Content Include="Views\Campus\Create.cshtml" />
-    <Content Include="Views\Campus\Delete.cshtml" />
-    <Content Include="Views\Campus\Details.cshtml" />
-    <Content Include="Views\Campus\Edit.cshtml" />
-    <Content Include="Views\Campus\Index.cshtml" />
     <Content Include="Views\UserTypes\Create.cshtml" />
     <Content Include="Views\UserTypes\Delete.cshtml" />
     <Content Include="Views\UserTypes\Details.cshtml" />
     <Content Include="Views\UserTypes\Edit.cshtml" />
     <Content Include="Views\UserTypes\Index.cshtml" />
+    <Content Include="Views\Campus\Create.cshtml" />
+    <Content Include="Views\Campus\Delete.cshtml" />
+    <Content Include="Views\Campus\Details.cshtml" />
+    <Content Include="Views\Campus\Edit.cshtml" />
+    <Content Include="Views\Campus\Index.cshtml" />
     <Content Include="Views\Cafeteria\Create.cshtml" />
     <Content Include="Views\Cafeteria\Delete.cshtml" />
     <Content Include="Views\Cafeteria\Details.cshtml" />
@@ -295,6 +295,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Content\images\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
